# uniffi-rs

./: Cargo.toml  README.md
fixtures/error-types/: Cargo.toml
fixtures/error-types/src/: lib.rs
fixtures/error-types/tests/bindings/: test.kts  test.swift
fixtures/ext-types/flat-procmacro-errors/: Cargo.toml
fixtures/ext-types/flat-procmacro-errors/src/: lib.rs
fixtures/proc-macro/src/: lib.rs
fixtures/proc-macro/tests/bindings/: test_proc_macro.kts  test_proc_macro.swift
