[package]
name = "uniffi-fixture-ext-types-flat-procmacro-errors"
edition = "2021"
version = "0.22.0"
license = "MPL-2.0"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
name = "ext_types_flat_procmacro_errors"

[dependencies]

thiserror = "1.0"
uniffi = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }
